got a complete working solution. but still want to beautify my code and add a detailed readme section

--- a/index.html
+++ b/index.html
@@ -33,47 +33,47 @@
       <!-- starting with a ul to organize all the time blocks -->
       <ul>
         <li id="block1" class="row">
-          <p class="hour time col-1">9AM</p>
+          <p class="hour time-block col-1">9AM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
         <li id="block2" class="row">
-          <p class="hour time col-1">10AM</p>
+          <p class="hour time-block col-1">10AM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
         <li id="block3" class="row">
-          <p class="hour time col-1">11AM</p>
+          <p class="hour time-block col-1">11AM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
         <li id="block4" class="row">
-          <p class="hour time col-1">12PM</p>
+          <p class="hour time-block col-1">12PM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
         <li id="block5" class="row">
-          <p class="hour time col-1">1PM</p>
+          <p class="hour time-block col-1">1PM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
         <li id="block6" class="row">
-          <p class="hour time col-1">2PM</p>
+          <p class="hour time-block col-1">2PM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
         <li id="block7" class="row">
-          <p class="hour time col-1">3PM</p>
+          <p class="hour time-block col-1">3PM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
         <li id="block8" class="row">
-          <p class="hour time col-1">4PM</p>
+          <p class="hour time-block col-1">4PM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
         <li id="block9" class="row">
-          <p class="hour time col-1">5PM</p>
+          <p class="hour time-block col-1">5PM</p>
           <textarea class="col-9"></textarea>
           <button class="saveBtn col-1">&#128190;</button>
         </li>
